feat: create hero elements and text shadows

--- a/index.html
+++ b/index.html
@@ -18,5 +18,15 @@
       <a href="#">Projects</a>
       <a href="#">Media</a>
     </div>
+
+    <div class="container-hero">
+        <div class="announcement">
+            Hi, I'm Joe!
+        </div>
+        <div class="text">
+            I'm a junior Computer Science student and aspiring software/web developer.
+            I like to make things of all types. Here, you'll find a collection of all the creations of which I am most proud.
+        </div>
+    </div>
   </body>
 </html>
