feat: add contact links elements

--- a/index.html
+++ b/index.html
@@ -28,5 +28,24 @@
             I like to make things of all types. Here, you'll find a collection of all the creations of which I am most proud.
         </div>
     </div>
+
+    <div class="container-links">
+        <a href="#" class="link">
+            <img src="./images/github.svg" alt="github icon">
+            <div class="text">GitHub</div>
+        </a>
+        <a href="#" class="link">
+            <img src="./images/linkedin.svg" alt="linkedin icon">
+            <div class="text">LinkedIn</div>
+        </a>
+        <a href="#" class="link">
+            <img src="./images/email.svg" alt="email icon">
+            <div class="text">josmth3030@gmail.com</div>
+        </a>
+        <a href="#" class="link">
+            <img src="./images/phone.svg" alt="phone icon">
+            <div class="text">(937)-307-0456</div>
+        </a>
+    </div>
   </body>
 </html>
