feat: establish links to github and linkedin

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     </div>
 
     <div class="container-links">
-        <a href="#" class="link">
+        <a href="https://github.com/joeesmithh" target="_blank" rel="noopener noreferrer" class="link">
             <img src="./images/github.svg" alt="github icon">
             <div class="text">GitHub</div>
         </a>
-        <a href="#" class="link">
+        <a href="https://www.linkedin.com/in/joseph-smith-2b2031142/" target="_blank" rel="noopener noreferrer" class="link">
             <img src="./images/linkedin.svg" alt="linkedin icon">
             <div class="text">LinkedIn</div>
         </a>
