fix: update hero wording for clarity

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="text">
             I'm a junior Computer Science student and aspiring software/web developer.
-            I like to make things of all types. Here, you'll find a collection of all the creations of which I am most proud.
+            I like to make things of all types. Here, you'll (soon) find a collection of all the creations of which I am most proud.
         </div>
     </div>
 
