fix: update linkedin link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="./images/github.svg" alt="github icon">
             <div class="text">GitHub</div>
         </a>
-        <a href="https://www.linkedin.com/in/joseph-smith-2b2031142/" target="_blank" rel="noopener noreferrer" class="link">
+        <a href="https://www.linkedin.com/in/joeesmithh/" target="_blank" rel="noopener noreferrer" class="link">
             <img src="./images/linkedin.svg" alt="linkedin icon">
             <div class="text">LinkedIn</div>
         </a>
